[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/UI/StatsMenu.gd" type="Script" id=1]
[ext_resource path="res://Themes/45Theme.tres" type="Theme" id=2]
[ext_resource path="res://Scenes/Buttons/Menu_Button_Tempate.tscn" type="PackedScene" id=3]
[ext_resource path="res://Themes/50Theme.tres" type="Theme" id=7]
[ext_resource path="res://Icons/MenuBackground.png" type="Texture" id=9]
[ext_resource path="res://Themes/35Theme.tres" type="Theme" id=11]

[node name="StatsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 11 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullMenu" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="HBoxContainer" parent="FullMenu"]
margin_right = 1280.0
margin_bottom = 82.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftMargin2" type="Label" parent="FullMenu/Header"]
margin_right = 20.0
margin_bottom = 82.0
rect_min_size = Vector2( 20, 0 )
size_flags_vertical = 3

[node name="CharName" type="Label" parent="FullMenu/Header"]
margin_left = 24.0
margin_right = 365.0
margin_bottom = 82.0
size_flags_vertical = 3
theme = ExtResource( 11 )
text = "Character name"
valign = 1
uppercase = true

[node name="MenuName" type="Label" parent="FullMenu/Header"]
margin_left = 369.0
margin_right = 903.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource( 7 )
text = "Character Stats"
align = 1
valign = 1

[node name="Exit" parent="FullMenu/Header" instance=ExtResource( 3 )]
margin_left = 907.0
margin_right = 1256.0
margin_bottom = 82.0
rect_min_size = Vector2( 200, 50 )

[node name="RightMargin2" type="Label" parent="FullMenu/Header"]
margin_left = 1260.0
margin_right = 1280.0
margin_bottom = 82.0
rect_min_size = Vector2( 20, 0 )
size_flags_vertical = 3

[node name="TabsContainer" type="HBoxContainer" parent="FullMenu"]
margin_top = 86.0
margin_right = 1280.0
margin_bottom = 663.0
size_flags_vertical = 3

[node name="LeftMargin" type="Label" parent="FullMenu/TabsContainer"]
margin_right = 20.0
margin_bottom = 577.0
rect_min_size = Vector2( 20, 0 )
size_flags_vertical = 3

[node name="CharacterPanel" type="VBoxContainer" parent="FullMenu/TabsContainer"]
margin_left = 24.0
margin_right = 224.0
margin_bottom = 577.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 3

[node name="Label" type="Label" parent="FullMenu/TabsContainer/CharacterPanel"]
margin_right = 200.0
margin_bottom = 57.0
rect_min_size = Vector2( 200, 50 )

[node name="Char1" parent="FullMenu/TabsContainer/CharacterPanel" instance=ExtResource( 3 )]
margin_top = 61.0
margin_right = 200.0
margin_bottom = 136.0
rect_min_size = Vector2( 200, 75 )
size_flags_vertical = 1

[node name="Char2" parent="FullMenu/TabsContainer/CharacterPanel" instance=ExtResource( 3 )]
visible = false
margin_top = 140.0
margin_right = 200.0
margin_bottom = 215.0
rect_min_size = Vector2( 200, 75 )
size_flags_vertical = 1

[node name="Char3" parent="FullMenu/TabsContainer/CharacterPanel" instance=ExtResource( 3 )]
visible = false
margin_top = 140.0
margin_right = 200.0
margin_bottom = 215.0
rect_min_size = Vector2( 200, 75 )
size_flags_vertical = 1

[node name="Char4" parent="FullMenu/TabsContainer/CharacterPanel" instance=ExtResource( 3 )]
visible = false
margin_top = 140.0
margin_right = 200.0
margin_bottom = 215.0
rect_min_size = Vector2( 200, 75 )
size_flags_vertical = 1

[node name="StatSlots" type="HBoxContainer" parent="FullMenu/TabsContainer"]
margin_left = 228.0
margin_right = 1256.0
margin_bottom = 577.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LeftVBox" type="VBoxContainer" parent="FullMenu/TabsContainer/StatSlots"]
margin_right = 254.0
margin_bottom = 577.0
size_flags_vertical = 3

[node name="StatName" type="Label" parent="FullMenu/TabsContainer/StatSlots/LeftVBox"]
margin_right = 254.0
margin_bottom = 73.0
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Stat Name"
align = 1
valign = 1

[node name="HealthLabel" type="Label" parent="FullMenu/TabsContainer/StatSlots/LeftVBox"]
margin_top = 77.0
margin_right = 254.0
margin_bottom = 136.0
size_flags_vertical = 3
theme = ExtResource( 11 )
text = "Health"
align = 1
valign = 1

[node name="AttackLabel" type="Label" parent="FullMenu/TabsContainer/StatSlots/LeftVBox"]
margin_top = 140.0
margin_right = 254.0
margin_bottom = 199.0
size_flags_vertical = 3
theme = ExtResource( 11 )
text = "Attack"
align = 1
valign = 1

[node name="DefenseLabel" type="Label" parent="FullMenu/TabsContainer/StatSlots/LeftVBox"]
margin_top = 203.0
margin_right = 254.0
margin_bottom = 262.0
size_flags_vertical = 3
theme = ExtResource( 11 )
text = "Defense"
align = 1
valign = 1

[node name="SpeedLabel" type="Label" parent="FullMenu/TabsContainer/StatSlots/LeftVBox"]
margin_top = 266.0
margin_right = 254.0
margin_bottom = 325.0
size_flags_vertical = 3
theme = ExtResource( 11 )
text = "Speed"
align = 1
valign = 1

[node name="LevelLabel" type="Label" parent="FullMenu/TabsContainer/StatSlots/LeftVBox"]
margin_top = 329.0
margin_right = 254.0
margin_bottom = 388.0
size_flags_vertical = 3
theme = ExtResource( 11 )
text = "Level"
align = 1
valign = 1

[node name="ExpLabel" type="Label" parent="FullMenu/TabsContainer/StatSlots/LeftVBox"]
margin_top = 392.0
margin_right = 254.0
margin_bottom = 451.0
size_flags_vertical = 3
theme = ExtResource( 11 )
text = "Experience"
align = 1
valign = 1

[node name="Space7" type="Label" parent="FullMenu/TabsContainer/StatSlots/LeftVBox"]
margin_top = 455.0
margin_right = 254.0
margin_bottom = 514.0
size_flags_vertical = 3
theme = ExtResource( 11 )
align = 1
valign = 1

[node name="Space8" type="Label" parent="FullMenu/TabsContainer/StatSlots/LeftVBox"]
margin_top = 518.0
margin_right = 254.0
margin_bottom = 577.0
size_flags_vertical = 3
theme = ExtResource( 11 )
align = 1
valign = 1

[node name="SpaceBuffer3" type="VBoxContainer" parent="FullMenu/TabsContainer/StatSlots"]
margin_left = 258.0
margin_right = 351.0
margin_bottom = 577.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MiddleVBox" type="VBoxContainer" parent="FullMenu/TabsContainer/StatSlots"]
margin_left = 355.0
margin_right = 697.0
margin_bottom = 577.0
size_flags_vertical = 3

[node name="CurrentValueLabel" type="Label" parent="FullMenu/TabsContainer/StatSlots/MiddleVBox"]
margin_right = 342.0
margin_bottom = 73.0
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Current Value"
align = 1
valign = 1

[node name="CurrHealth" type="Label" parent="FullMenu/TabsContainer/StatSlots/MiddleVBox"]
margin_top = 77.0
margin_right = 342.0
margin_bottom = 134.0
size_flags_vertical = 3
text = "50"
align = 1
valign = 1

[node name="CurrAttack" type="Label" parent="FullMenu/TabsContainer/StatSlots/MiddleVBox"]
margin_top = 138.0
margin_right = 342.0
margin_bottom = 195.0
size_flags_vertical = 3
text = "5"
align = 1
valign = 1

[node name="CurrDefense" type="Label" parent="FullMenu/TabsContainer/StatSlots/MiddleVBox"]
margin_top = 199.0
margin_right = 342.0
margin_bottom = 256.0
size_flags_vertical = 3
text = "5"
align = 1
valign = 1

[node name="CurrSpeed" type="Label" parent="FullMenu/TabsContainer/StatSlots/MiddleVBox"]
margin_top = 260.0
margin_right = 342.0
margin_bottom = 317.0
size_flags_vertical = 3
text = "5"
align = 1
valign = 1

[node name="CurrLevel" type="Label" parent="FullMenu/TabsContainer/StatSlots/MiddleVBox"]
margin_top = 321.0
margin_right = 342.0
margin_bottom = 378.0
size_flags_vertical = 3
text = "1"
align = 1
valign = 1

[node name="TotalExp" type="Label" parent="FullMenu/TabsContainer/StatSlots/MiddleVBox"]
margin_top = 382.0
margin_right = 342.0
margin_bottom = 439.0
size_flags_vertical = 3
text = "0"
align = 1
valign = 1

[node name="Label9" type="Label" parent="FullMenu/TabsContainer/StatSlots/MiddleVBox"]
margin_top = 443.0
margin_right = 342.0
margin_bottom = 500.0
size_flags_vertical = 3
align = 1
valign = 1

[node name="Label7" type="Label" parent="FullMenu/TabsContainer/StatSlots/MiddleVBox"]
margin_top = 504.0
margin_right = 342.0
margin_bottom = 577.0
size_flags_vertical = 3
theme = ExtResource( 2 )
align = 1
valign = 1

[node name="SpaceBuffer" type="VBoxContainer" parent="FullMenu/TabsContainer/StatSlots"]
margin_left = 701.0
margin_right = 794.0
margin_bottom = 577.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RightVBox" type="VBoxContainer" parent="FullMenu/TabsContainer/StatSlots"]
margin_left = 798.0
margin_right = 1028.0
margin_bottom = 577.0
size_flags_vertical = 3

[node name="MaxValue" type="Label" parent="FullMenu/TabsContainer/StatSlots/RightVBox"]
margin_right = 230.0
margin_bottom = 73.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Base Stat"
align = 1
valign = 1

[node name="MaxHealth" type="Label" parent="FullMenu/TabsContainer/StatSlots/RightVBox"]
margin_top = 77.0
margin_right = 230.0
margin_bottom = 136.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "100"
align = 1
valign = 1

[node name="MaxAttack" type="Label" parent="FullMenu/TabsContainer/StatSlots/RightVBox"]
margin_top = 140.0
margin_right = 230.0
margin_bottom = 199.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "5"
align = 1
valign = 1

[node name="MaxDefense" type="Label" parent="FullMenu/TabsContainer/StatSlots/RightVBox"]
margin_top = 203.0
margin_right = 230.0
margin_bottom = 262.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "5"
align = 1
valign = 1

[node name="MaxSpeed" type="Label" parent="FullMenu/TabsContainer/StatSlots/RightVBox"]
margin_top = 266.0
margin_right = 230.0
margin_bottom = 325.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "5"
align = 1
valign = 1

[node name="Label6" type="Label" parent="FullMenu/TabsContainer/StatSlots/RightVBox"]
margin_top = 329.0
margin_right = 230.0
margin_bottom = 388.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1
valign = 1

[node name="NextLevel" type="Label" parent="FullMenu/TabsContainer/StatSlots/RightVBox"]
margin_top = 392.0
margin_right = 230.0
margin_bottom = 451.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Next Level"
align = 1
valign = 1

[node name="ExpToNextLevel" type="Label" parent="FullMenu/TabsContainer/StatSlots/RightVBox"]
margin_top = 455.0
margin_right = 230.0
margin_bottom = 514.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "100"
align = 1
valign = 1

[node name="Label7" type="Label" parent="FullMenu/TabsContainer/StatSlots/RightVBox"]
margin_top = 518.0
margin_right = 230.0
margin_bottom = 577.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1
valign = 1

[node name="SpaceBuffer2" type="VBoxContainer" parent="FullMenu/TabsContainer/StatSlots"]
visible = false
margin_left = 977.0
margin_right = 1022.0
margin_bottom = 615.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RightMargin" type="Label" parent="FullMenu/TabsContainer"]
margin_left = 1260.0
margin_right = 1280.0
margin_bottom = 577.0
rect_min_size = Vector2( 20, 0 )
size_flags_vertical = 3

[node name="BottomMargin" type="Label" parent="FullMenu"]
margin_top = 667.0
margin_right = 1280.0
margin_bottom = 724.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 11 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="focus_entered" from="." to="." method="_on_EquipMenu_focus_entered"]
